# ZincOS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
.archive/hello/: Makefile  build.sh
.archive/hello/iso/boot/grub/: grub.cfg
.archive/hello/src/: linker.ld
.archive/hello/src/kernel/: kernel.asm  kernel.c
.archive/hello/src/kernel/config/: functions.c
iso/boot/grub/: grub.cfg
src/kernel/: gdt.asm  kernel.asm  kernel.c
src/kernel/config/: colors.c  colors.h  functions.c  settings.h
src/kernel/config/gdt/: gdt.asm
src/kernel/config/idt/: idt.asm
src/kernel/folders/: dir.h  mkdir.c
src/kernel/functions/: shutdown.asm
src/kernel/functions/asm/: shutdown.asm
src/kernel/functions/c/screen/: functions.c  functions.h
src/kernel/functions/c/string/: functions.c  functions.h
src/kernel/gdt/: gdt.asm  gdt.h
src/kernel/keyboard/: keyboard.asm  keyboard.c  keyboard.h
src/kernel/storage/: ata.c  ata.h
src/kernel/timing/: sleep.c  sleep.h
